# Chem2TextQA

./: .env.example  .gitignore  README.md  environment.yml  pyproject.toml
chem2textqa/: __init__.py  cli.py
chem2textqa/config/: __init__.py  settings.py
chem2textqa/models/: __init__.py  document.py
chem2textqa/scrapers/: __init__.py  base.py  epo.py  google_patents.py  pubmed.py  uspto.py
chem2textqa/storage/: __init__.py  jsonl.py
chem2textqa/utils/: logging.py  rate_limiter.py  retry.py
tests/: conftest.py  test_config.py  test_models.py  test_storage.py
tests/test_scrapers/: test_epo.py  test_google_patents.py  test_pubmed.py  test_uspto.py
